Fix hover on mobile chrome.

--- a/css/app/index.css
+++ b/css/app/index.css
@@ -253,28 +253,30 @@ hr {
     flex-direction: column;
 }
 
+@media (hover: hover) {
+    .title a:hover,
+    .filter:hover,
+    span > a:hover {
+        color: #ea1f4c;
+    }
+
+    .image-caption-wrapper:hover .image {
+        opacity: 0.3;
+    }
+
+    .image-caption-wrapper:hover .caption,
+    .image-caption-wrapper:hover .caption {
+        opacity: 1;
+    }
+}
+
+.filter.is-checked {
+    color: #ea1f4c !important;
+}
+
 .title a, .filter, .caption a, span > a {
     text-decoration: none;
-    color: black;
-}
-
-.title a:hover,
-.filter:hover,
-span > a:hover,
-.filter.is-checked {
-    color: #ea1f4c;
-}
-
-.image-caption-wrapper:hover .image {
-    opacity: 0.3;
-}
-
-.image-caption-wrapper:hover .caption {
-    opacity: 1;
-}
-
-.image-caption-wrapper:hover .filters.overlay {
-    opacity: 1;
+    color: black !important;
 }
 
 .image-wrapper {
@@ -301,7 +303,6 @@ span > a:hover,
     position: absolute;
     bottom: 0;
     right: 0;
-    /*transform: translate(-50%, -50%);*/
     padding: 15px 20px;
 }
 
